# solar

./: .config  .gitignore  .gitreview  .testr.conf  .travis.yml  .vagrantplugins  AUTHORS  ChangeLog  Dockerfile  MANIFEST.in  README  README.md  README.rst  TODO  TODO.md  Vagrantfile  Vagrantfile_docker  actions.py  celery.yml  cli.py  compose.yml  config.yaml  config.yml  devenv_compose.yaml  doc-test.conf  docker-compose.yml  docker.yml  example-bootstrap.py  example-compiled-resources.py  example-lxc.py  example-puppet.py  example-riaks-template.py  example-riaks.py  example.py  example.sh  handlers.py  haproxy-deployment.sh  haproxy.cfg  hiera.yaml  jenkins-config.yaml  (+18 more)
bootstrap/: README.md  build-image.yaml  build-image.yml  packer.yaml  solar-master-centos-docker.json  solar-master-centos.json  solar-master-docker.json  solar-master-ubuntu-docker.json  solar-master.json
bootstrap/alpine/: README.md  solar-minimal.json
bootstrap/http/: ks.cfg  preseed.cfg
bootstrap/playbooks/: build-main.yaml  build-main.yml  celery.yaml  celery.yml  cinder.yml  conf_hosts.sh  custom-configs.yaml  custom-configs.yml  databases.yaml  docker.yml  docker_post.sh  docker_pre.sh  fix_centos7_six.sh  postgres.yaml  pxe.yaml  riak.yaml  solar-agent.yaml  solar.yaml  solar.yml
bootstrap/vagrant_plugins/: noop.rb
doc/: events.md  libvirt.md
doc/source/: architecture.rst  conf.py  deployment_plan.rst  development.rst  examples.rst  faq.rst  fuel_modular_tasks.rst  glossary.rst  handler_ansible.rst  index.rst  installation.rst  orchestration.rst  resource.rst  resource_repository.rst  transports.rst  usage.rst
docs/: Makefile  commit-log.md  events.md  glossary.rst  index.rst  libvirt.md  orchestration.md  removal.md
docs/source/: deployment_plan.rst  examples.rst  fuel_modular_tasks.rst  glossary.rst  orchestration.rst  resource.rst  transports.rst
docs/spec/: building_dependencies.md  deployment_blocks.spec  how_to_do_primary.md  layers.spec  orchestration_in_fuel.yaml
etc/solar/: solar.yaml.sample
examples/: check_deployment.sh  nodes_list.yaml  profile_test.yml
examples/bootstrap/: README.md  Vagrantfile  example-bootstrap.py  vagrant-settings.yaml
examples/cli/: README  example.sh
examples/compiled-resources/: README.md  example-compiled-resources.py
examples/hosts_file/: README.md  hosts.py
examples/librarian/: README  librarian.yaml
examples/library_ceph/: README.md  ceph.py
examples/lxc/: README.md  example-lxc.py
examples/openstack/: README.md  openstack.py  rabbitmq_user.yaml
examples/orch/: example_py.yml  for_stop.yaml  simple.yaml
examples/provisioning/: provision.py  provision.sh
examples/resources/: containers.yml  docker.yml  docker2.yml  haproxy.yml  keystone.yml  mariadb.yml
examples/riak/: README.md  haproxy_riak_config.yaml  riak_cluster.yaml  riak_service.yaml  riaks-template.py  riaks.py  riaks_big.py
examples/simple/: hosts  main.yml  remove.yml  run.yml
examples/solar_agent/: example.py
examples/solard/: example.py
examples/torrent/: README.md  example.py
examples/wordpress/: run.sh
f2s/: .gitignore  README.md  f2s.py  fsclient.py
f2s/patches/: hiera.patch  noop_tests.patch
f2s/vrs/: base-os.yml  ceph-osd.yml  cinder-vmware.yml  cinder.yml  compute-vmware.yml  compute.yml  controller.yml  fuel_node.yaml  genkeys.yaml  ironic.yml  mongo.yml  prep.yaml  primary-controller.yml  primary-mongo.yml  virt.yml
haproxy_deployment/: haproxy-deployment.yaml  haproxy_deployment.py
orch/: TODO  examples.py  graph.py  tasks.py  test_examples.py
orch/examples/: example_py.yml  simple.yaml
publish-docs/: index.html
resources/: README.md
resources/ansible_local/: meta.yaml
resources/ansible_remote/: meta.yaml
resources/ansible_sample/: meta.yaml
resources/apache_puppet/: README.md  meta.yaml  test.py
resources/apt_repo/: meta.yaml
resources/ceph_keys/: meta.yaml
resources/ceph_mon/: meta.yaml
resources/cinder_api_puppet/: README.md  meta.yaml  test.py
resources/cinder_glance_puppet/: README.md  meta.yaml
resources/cinder_puppet/: README.md  meta.yaml  test.py
resources/cinder_scheduler_puppet/: README.md  meta.yaml  test.py
resources/cinder_volume_puppet/: README.md  meta.yaml  test.py
resources/container_networks/: meta.yaml
resources/data_container/: meta.yaml
resources/dnsmasq/: meta.yaml
resources/docker/: meta.yaml
resources/docker_container/: meta.yaml
resources/ex_managed/: meta.yaml
resources/fuel_library/: meta.yaml
resources/glance_api_service/: meta.yaml  test.py
resources/glance_config/: keystone-glance.sh  meta.yaml
resources/glance_puppet/: README.md  meta.yaml  test.py
resources/glance_registry_puppet/: README.md  meta.yaml  test.py
resources/glance_registry_service/: meta.yaml
resources/haproxy/: meta.yaml
resources/haproxy_config/: README.md  meta.yaml
rmq/: rmq.yaml  rmq_config.yaml  rmq_service.yaml
schema/: actions.yml  ha.yml  ha_keepalived.yml  resources_only.yml  simple.yml
solar/: MANIFEST.in  __init__.py  config.py  conftest.py  errors.py  requirements.txt  setup.py  template.py  test-requirements.txt  utils.py  version.py
solar/cli/: base.py  (+10 more)
solard/: requirements.txt  setup.py
spec/: base.spec  core_api.spec  current_flow.spec  extensions.spec  inventory.spec  networking.spec  questions
specs/: solar.spec
templates/: controller.yaml  controller.yml  glance.yaml  glance_base.yaml  glance_db.yml  glance_register.yml  glance_registry.yaml  haproxy.yaml  keystone_api.yaml  keystone_api.yml  keystone_base.yml  mos_repos.yaml  nodes.yaml  nodes.yml  nodes_network.yaml  nodes_network.yml  nodes_with_transports.yaml  not_provisioned_nodes.yaml  openstack_base.yaml  openstack_base.yml  profile.yaml  profile.yml  riak_cluster.yml  riak_nodes.yaml  riak_nodes.yml  seed_node.yml  sources.yaml
tool/: setup.py
utils/: docker_build.sh  solar-celery  solar-worker  solar-worker-defaults  solar-worker.conf  solar-worker.service  solar-workerd
x/: TODO.md  actions.py  db.py  deployment.py  handlers.py  observer.py  resource.py  signals.py  utils.py
(+982 files in other folders)
