[metadata]
name = solar
version = 0.0.1
author = Mirantis Inc.
author-email = product@mirantis.com
summary = Deployment tool
description-file = README.md
license = Apache-2
home-page = http://mirantis.com
classifier =
     Development Status :: 1 - Beta
     License :: OSI Approved :: Apache Software License
     Programming Language :: Python
     Programming Language :: Python :: 2.7
     Topic :: System :: Software Distribution
keywords =
    deployment

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[entry_points]
console_scripts =
    solar = solar.cli.main:run
    solar-worker = solar.orchestration:main
solar.computable_inputs =
    lua = solar.computable_inputs.ci_lua:LuaProcessor
    jinja = solar.computable_inputs.ci_jinja:JinjaProcessor
    jinja2 = solar.computable_inputs.ci_jinja:JinjaProcessor
    j2 = solar.computable_inputs.ci_jinja:JinjaProcessor
    python = solar.computable_inputs.ci_python:PyProcessor
    py = solar.computable_inputs.ci_python:PyProcessor
solar.transports.run =
    ssh = solar.core.transports.ssh_raw:RawSSHRunTransport
    solar_agent = solar.core.transports.solar_agent_transport:SolarAgentRunTransport
solar.transports.sync =
    ssh = solar.core.transports.ssh:SSHSyncTransport
    rsync = solar.core.transports.rsync:RsyncSyncTransport
    solar_agent = solar.core.transports.solar_agent_transport:SolarAgentSyncTransport
    torrent = solar.core.transports.torrent:TorrentSyncTransport
