[metadata]
name = solar
version = 0.3.0
author = Mirantis Inc.
author-email = product@mirantis.com
summary = Deployment tool
description-file = README.rst
license = Apache-2
home-page = http://mirantis.com
classifier =
     Development Status :: 4 - Beta
     License :: OSI Approved :: Apache Software License
     Programming Language :: Python
     Programming Language :: Python :: 2.7
     Topic :: System :: Software Distribution
keywords =
    deployment

[files]
package-data = solar = ansible_library/*.py

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[entry_points]
console_scripts =
    solar = solar.cli.main:run
    solar-worker = solar.orchestration:main
solar.computable_inputs =
    lua = solar.computable_inputs.ci_lua:LuaProcessor
    jinja = solar.computable_inputs.ci_jinja:JinjaProcessor
    jinja2 = solar.computable_inputs.ci_jinja:JinjaProcessor
    j2 = solar.computable_inputs.ci_jinja:JinjaProcessor
    python = solar.computable_inputs.ci_python:PyProcessor
    py = solar.computable_inputs.ci_python:PyProcessor
solar.transports.run =
    ssh = solar.core.transports.ssh_raw:RawSSHRunTransport
    solar_agent = solar.core.transports.solar_agent_transport:SolarAgentRunTransport
solar.transports.sync =
    ssh = solar.core.transports.ssh:SSHSyncTransport
    rsync = solar.core.transports.rsync:RsyncSyncTransport
    solar_agent = solar.core.transports.solar_agent_transport:SolarAgentSyncTransport
    torrent = solar.core.transports.torrent:TorrentSyncTransport
solar.handlers =
    ansible = solar.core.handlers.ansible_template:AnsibleTemplate
    ansible_local = solar.core.handlers.ansible_template_local:AnsibleTemplateLocal
    ansible_playbook = solar.core.handlers.ansible_playbook:AnsiblePlaybook
    ansible_playbook_local = solar.core.handlers.ansible_playbook_local:AnsiblePlaybookLocal
    shell = solar.core.handlers.shell:Shell
    puppet = solar.core.handlers.puppet:Puppet
    none = solar.core.handlers.base:Empty
    puppetv2 = solar.core.handlers.puppet:PuppetV2
    naive_sync = solar.core.handlers.naive_sync:NaiveSync
solar.orchestration.executors =
    zerorpc = solar.orchestration.executors.zerorpc_executor
solar.orchestration.extensions =
    tasks = solar.orchestration.extensions:tasks
    system_log = solar.orchestration.extensions:system_log
    scheduler = solar.orchestration.extensions:scheduler
solar.orchestration.extensions_clients =
    tasks = solar.orchestration.extensions:tasks_client
    system_log = solar.orchestration.extensions:system_log_client
    scheduler = solar.orchestration.extensions:scheduler_client
solar.orchestration.drivers.tasks =
    solar = solar.orchestration.workers.tasks:Tasks
solar.orchestration.drivers.scheduler =
    solar = solar.orchestration.workers.scheduler:Scheduler
solar.orchestration.drivers.system_log =
    solar = solar.orchestration.workers.system_log:SystemLog
solar.orchestration.hooks.tasks.construct =
    scheduler_sub = solar.orchestration.workers.scheduler:tasks_subscribe
    system_log_sub = solar.orchestration.workers.system_log:tasks_subscribe
solar.orchestration.hooks.system_log.construct =
    session_sub = solar.orchestration:wrap_session
solar.orchestration.hooks.scheduler.construct =
    session_sub = solar.orchestration:wrap_session
solar.orchestration.runners =
    gevent = solar.orchestration.runners.gevent_runner:run_all
solar.orchestration.constructors =
    tasks = solar.orchestration:construct_tasks
    system_log = solar.orchestration:construct_system_log
    scheduler = solar.orchestration:construct_scheduler
